clean up salamander